deploy/kubernetes/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airun-service
  namespace: default
  labels:
    app: airun
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: airun
